--- a/gy_PartyInvitation/Views/Home/Register.cshtml
+++ b/gy_PartyInvitation/Views/Home/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Participant
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Katılım";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
