--- a/gy_PartyInvitation/Views/Home/Thanks.cshtml
+++ b/gy_PartyInvitation/Views/Home/Thanks.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Thanks";
+    ViewData["Title"] = "Teşekkürler";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
